# lightApp

./: CMakeLists.txt  Makefile  README.md  main.c
.github/workflows/: tests.yml
APP/: Swc_LightsControl.c  Swc_LightsControl.h
BSW/DET/: ErrorHandler.c  ErrorHandler.h
BSW/GPIO/: Gpio.c  Gpio.h  Gpio_Cfg.c  Gpio_Cfg.h
MCAL/: Dio.c  Dio.h
ProjectConfig/: ProjectConfig.h
RTE/: Rte_LightsControl.c  Rte_LightsControl.h
Testing/: main_test.c  test_gpio.c  unity_main_test.c  unity_test_gpio.c
